sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:10: error: ';' expected but ')' found.
       {pot+=1})}
               ^AlgGnomeSort:11: error: ';' expected but 'else' found.
       else 
       ^AlgGnomeSort:16: error: Unmatched closing brace '}' ignored here
}
^